@@ -108,11 +108,13 @@ class TestLinkRewriterTagReplacing(TestCase):
         self.assertEqual(page_type_link, '<a href="/article/3">')
 
         # but it should also be able to handle other supported
-        # link types (email, external) even if no rules is provided
+        # link types (email, external, anchor) even if no rules is provided
         external_type_link = rewriter('<a href="https://wagtail.io/">')
         self.assertEqual(external_type_link, '<a href="https://wagtail.io/">')
         email_type_link = rewriter('<a href="mailto:test@wagtail.io">')
         self.assertEqual(email_type_link, '<a href="mailto:test@wagtail.io">')
+        anchor_type_link = rewriter('<a href="#test">')
+        self.assertEqual(anchor_type_link, '<a href="#test">')
 
         # As well as link which don't have any linktypes
         link_without_linktype = rewriter('<a data-link="https://wagtail.io">')
@@ -131,6 +133,7 @@ class TestLinkRewriterTagReplacing(TestCase):
             'page': lambda attrs: '<a href="/article/{}">'.format(attrs['id']),
             'external': lambda attrs: '<a rel="nofollow" href="{}">'.format(attrs['href']),
             'email': lambda attrs: '<a data-email="true" href="{}">'.format(attrs['href']),
+            'anchor': lambda attrs: '<a data-anchor="true" href="{}">'.format(attrs['href']),
             'custom': lambda attrs: '<a data-phone="true" href="{}">'.format(attrs['href']),
         }
         rewriter = LinkRewriter(rules)
@@ -146,6 +149,8 @@ class TestLinkRewriterTagReplacing(TestCase):
         self.assertEqual(external_type_link_http, '<a rel="nofollow" href="http://wagtail.io/">')
         email_type_link = rewriter('<a href="mailto:test@wagtail.io">')
         self.assertEqual(email_type_link, '<a data-email="true" href="mailto:test@wagtail.io">')
+        anchor_type_link = rewriter('<a href="#test">')
+        self.assertEqual(anchor_type_link, '<a data-anchor="true" href="#test">')
 
         # But not the unsupported ones.
         link_with_no_linktype = rewriter('<a href="tel:+4917640206387">')
